[package]
name = "wasabi"
version = "0.1.3"
edition = "2024"
license = "MIT"
authors = ["dijikey"]
categories = ["game-engines", "graphics", "gui", "rendering"]
repository = "https://github.com/dijikey/wasabi"
description = "A simple 3D game engine with a fully customized architecture"
keywords = ["game", "engine", "gamedev", "graphics", "wasabi"]

[features]
no-default = []

[dependencies]
wasabi-traits = {path = "crates/wasabi-traits"}
gethand = { path = "crates/gethand" }


[dev-dependencies]
wasabi-event_sys = {path = "crates/wasabi-event_sys", features = []}
